--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,15 @@
+.bgImg{
+  background: url(/_next/static/media/bg.2eb61cb9.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center; /* Center content horizontally */
+  align-items: center;
+  background-position: center top !important;
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -228,3 +240,8 @@
     transform: rotate(0deg);
   }
 }
+
+
+
+
+
