--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,5 @@
 .bgImg{
-  background: url(/_next/static/media/bg.2eb61cb9.png);
+  background: url('../../public/bg.png');
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
